lab_3/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deployment
    labels:
        service: kube-service
spec:
    replicas: 2
    selector:
        matchLabels:
            app: kube-app
    template:
        metadata:
            labels:
                app: kube-app
        spec:
            containers:
                - name: kube-app
                  image: thatonetoaster/kube-app:v1
