lab_3/manifests/postgres.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: postgres-set
spec:
  clusterIP: None
  selector:
    app: postgres-set
  ports:
  - port: 5432
    targetPort: 5432

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-set
spec:
  serviceName: postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: postgres-set
  template:
    metadata:
      labels:
        app: postgres-set
    spec:
      containers:
      - name: postgres
        image: postgres:18.3-alpine3.23
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql
        - name: postgres-init
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: postgres-init
        configMap:
          name: postgres-init

  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
