lab_3/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: kube-service
spec:
    selector:
        app: kube-app
    ports:
        - port: 5000
          targetPort: 5000
